--- a/ThyroidDisease.ipynb
+++ b/ThyroidDisease.ipynb
@@ -140,9 +140,7 @@
     "from sklearn.linear_model import BayesianRidge\n",
     "# from sklearn.impute import IterativeImputer, SimpleImputer\n",
     "from sklearn.mixture import GaussianMixture\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.preprocessing import OrdinalEncoder, StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder, LabelEncoder, OrdinalEncoder, StandardScaler\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
