Refactor to create a list of data files so that I can iterate through files to create master dataset

--- a/ThyroidDisease.ipynb
+++ b/ThyroidDisease.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 239,
    "id": "d5a66125",
    "metadata": {
     "tags": []
@@ -180,7 +180,12 @@
       "mkdir: ./data/thyroid+disease//archive_thyroid_disease: File exists\n",
       "mkdir: ./data/thyroid+disease//domain_knowledge: File exists\n",
       "mkdir: ./data/thyroid+disease//new_thyroid: File exists\n",
-      "mkdir: ./data/thyroid+disease//questionable_data: File exists\n"
+      "mkdir: ./data/thyroid+disease//questionable_data: File exists\n",
+      "zsh:1: no matches found: ./data/thyroid+disease//thyroid0387*\n",
+      "mv: ./data/thyroid+disease//thyroid.theory: No such file or directory\n",
+      "zsh:1: no matches found: ./data/thyroid+disease//new-thyroid*\n",
+      "zsh:1: no matches found: ./data/thyroid+disease//hypothyroid*\n",
+      "zsh:1: no matches found: ./data/thyroid+disease//sick-euthyroid*\n"
      ]
     }
    ],
@@ -427,16 +432,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "444fdb4a-65ad-40f4-a7e1-849e5eb16a1a",
+   "id": "d3e210b9-f627-48f9-9840-63e22d4acc9f",
    "metadata": {},
    "source": [
-    "Examine the 6 data files"
+    "Run through a shell command to retreive the list of training data files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "f0117523-fab7-4359-b69f-5b237d64da4d",
+   "execution_count": 263,
+   "id": "164c754f-4006-427f-af70-5ccbba95fd22",
    "metadata": {
     "tags": []
    },
@@ -455,7 +460,48 @@
     }
    ],
    "source": [
-    "!find {base_dir} -maxdepth 1 -name \"*.data\" "
+    "import subprocess as sp\n",
+    "data_files = sp.getoutput(f'find {base_dir} -maxdepth 1 -name \"*.data\"')\n",
+    "print(data_files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32e5f16c-4806-4ee5-bb7e-cc73df8ca182",
+   "metadata": {},
+   "source": [
+    "Split the string into list of data files to iterate through to create a master data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "a948d61b-92f3-4eba-9404-bce46f814b3c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['./data/thyroid+disease//dis.data', './data/thyroid+disease//allrep.data', './data/thyroid+disease//allhyper.data', './data/thyroid+disease//sick.data', './data/thyroid+disease//allhypo.data', './data/thyroid+disease//allbp.data']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_data_files = data_files.split('\\n')\n",
+    "# Clean up variable\n",
+    "del data_files\n",
+    "print(list_of_data_files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "444fdb4a-65ad-40f4-a7e1-849e5eb16a1a",
+   "metadata": {},
+   "source": [
+    "Examine the 6 data files"
    ]
   },
   {
