Refactor to create master dataset iterating through iterating through the files

--- a/ThyroidDisease.ipynb
+++ b/ThyroidDisease.ipynb
@@ -501,16 +501,14 @@
    "id": "444fdb4a-65ad-40f4-a7e1-849e5eb16a1a",
    "metadata": {},
    "source": [
-    "Examine the 6 data files"
+    "Populate the master data set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "77cd031b",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 275,
+   "id": "9c1d6f37-715b-4620-bae4-a87f7f60889b",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -700,13 +698,21 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./data/thyroid+disease/allbp.data\", header=None)\n",
+    "df = pd.DataFrame()\n",
+    "for data_file in list_of_data_files:\n",
+    "    if df.empty:\n",
+    "        df = pd.read_csv(data_file, header=None)\n",
+    "    else:\n",
+    "        df = pd.concat([df, pd.read_csv(data_file, header=None)], \n",
+    "                       axis=0, # Add rows to DataFrame\n",
+    "                       ignore_index=True\n",
+    "                      )\n",
     "df.head()"
    ]
   },
@@ -818,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 278,
    "id": "078a5d24-408c-49d2-b38a-44768b64919c",
    "metadata": {
     "tags": []
@@ -838,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 280,
    "id": "8b86d06a-d10d-4f36-8404-015d1cc6cd16",
    "metadata": {
     "tags": []
@@ -1046,7 +1052,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 282,
    "id": "35367323-2790-4de1-8f50-af3860d344eb",
    "metadata": {
     "tags": []
@@ -1086,7 +1092,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2800, 30)\n"
+      "(16800, 30)\n"
      ]
     }
    ],
@@ -1100,7 +1106,7 @@
    "id": "97b70131-32fd-48f2-b820-6ec3bbc1feb7",
    "metadata": {},
    "source": [
-    "There are 2800 observations, 29 attributes, and 1 outcome variable in the dataset"
+    "There are 16800 observations, 29 attributes, and 1 outcome variable in the dataset"
    ]
   },
   {
@@ -1451,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 285,
    "id": "4df17a15-0774-4e78-abe3-c2a024e0ff1b",
    "metadata": {
     "tags": []
