Refactor to achieve following tasks 1. Create a list a list of data dictionary files so that I can iterate through files to create master data dictionary 2. Update code to create the master data dictionary curated from across the files

--- a/ThyroidDisease.ipynb
+++ b/ThyroidDisease.ipynb
@@ -718,18 +718,187 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06260fd0-d60c-4786-8f70-fac6016a7fb3",
-   "metadata": {
-    "tags": []
-   },
+   "id": "c906c0d6-596a-4286-adc4-009e2e073f3b",
+   "metadata": {},
    "source": [
-    "Parse the .names file to create column names and data dictionary"
+    "Run through a shell command to retreive the list of data dictionary files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "ce646dc6",
+   "execution_count": 287,
+   "id": "a1fc79d2-4fce-4639-8608-0149e0243580",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/thyroid+disease//allrep.names\n",
+      "./data/thyroid+disease//allhypo.names\n",
+      "./data/thyroid+disease//sick.names\n",
+      "./data/thyroid+disease//dis.names\n",
+      "./data/thyroid+disease//allbp.names\n",
+      "./data/thyroid+disease//allhyper.names\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary_files = sp.getoutput(f'find {base_dir} -maxdepth 1 -name \"*.names\"')\n",
+    "print(dictionary_files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba740ef9-dca0-4b7c-b979-37be73d88e79",
+   "metadata": {},
+   "source": [
+    "Split the string into list of dictionary files to iterate through to create a master dictionary of the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "id": "0bfc9762-7347-4fe6-b52a-6b8bc1aeb13a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['./data/thyroid+disease//allrep.names', './data/thyroid+disease//allhypo.names', './data/thyroid+disease//sick.names', './data/thyroid+disease//dis.names', './data/thyroid+disease//allbp.names', './data/thyroid+disease//allhyper.names']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_of_dictionary_files = dictionary_files.split('\\n')\n",
+    "# Clean up variable\n",
+    "del dictionary_files\n",
+    "print(list_of_dictionary_files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8e9c049-8d20-464d-8779-744c1da29d14",
+   "metadata": {},
+   "source": [
+    "Populate the col_names list for naming the columns in the dataset, and create the data_dictionary which is a dictionary of key column names, value list of available values for each of the column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 374,
+   "id": "58a2091f-afb6-48be-80f1-fcbe296a6f15",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "col_names = []\n",
+    "data_dictionary = {}\n",
+    "\n",
+    "for dictionary_file in list_of_dictionary_files:\n",
+    "    with open(dictionary_file, mode = 'r', encoding = 'utf-8-sig') as f:\n",
+    "        # First 6 lines are descriptions so ignore. 7th line is empty line so doesn't matter either\n",
+    "        for times in range(7):\n",
+    "            _ = f.readline()\n",
+    "\n",
+    "        # Read in remaining lines into a variable\n",
+    "        list_of_string_in_line = f.readlines()\n",
+    "\n",
+    "        # Build up a list of column name, and a dictionary for data\n",
+    "        for string_in_line in list_of_string_in_line:\n",
+    "            # The column name are identified by ':'\n",
+    "            if ':' in string_in_line:\n",
+    "                # The first part of the line tells me what the column name is\n",
+    "                col_name = string_in_line.split(\":\")[0]\n",
+    "                # Remove spacing with the charcter '_' for column name format\n",
+    "                if \" \" in col_name:\n",
+    "                    col_name = col_name.replace(' ', '_')\n",
+    "\n",
+    "                # Only perform this action when the item is not in the list. Only done once\n",
+    "                if col_name not in col_names:\n",
+    "                    # Populate the column name for the dataset\n",
+    "                    col_names.append(col_name)\n",
+    "\n",
+    "                # The 2nd part of the line tells me what are the values that are in the column\n",
+    "                values_for_col = string_in_line.split(\":\")[1]\n",
+    "                # Cleanup the splitting characters\n",
+    "                values_for_col = values_for_col.replace(\"\\t\", \"\").replace('\\n', '').replace('.', '').replace(' ', '')\n",
+    "                # Split up the string to identify individual values allowed for column\n",
+    "                values_for_col = values_for_col.split(\",\")\n",
+    "\n",
+    "                # Initialize value for the dictionary only once\n",
+    "                if col_name not in data_dictionary.keys():\n",
+    "                    data_dictionary[col_name] = []\n",
+    "                \n",
+    "                # Create a dictionary of the data\n",
+    "                # If the value list is just initialized\n",
+    "                if data_dictionary[col_name] == []:\n",
+    "                    # Assign the whole list as new value list\n",
+    "                    data_dictionary[col_name] = values_for_col\n",
+    "                    # data_dictionary[col_name].extend(values_for_col)\n",
+    "                # If there is at least a value in values_for_col not in the value list\n",
+    "                elif any([value_for_col not in data_dictionary[col_name] for value_for_col in values_for_col]):\n",
+    "                    # Add each value that is not in the list to the value list\n",
+    "                    for value_not_in_list in [val for val in values_for_col if val not in data_dictionary[col_name]]:\n",
+    "                        data_dictionary[col_name].append(value_not_in_list)\n",
+    "\n",
+    "                        \n",
+    "        # Find out where the word `class` is to identify the class variable\n",
+    "        index_of_class = ['class' in string_in_line for string_in_line in list_of_string_in_line].index(True)\n",
+    "\n",
+    "        # Concat the strings from start to identify the class options \n",
+    "        class_options = ''.join(list_of_string_in_line[:index_of_class+1])\n",
+    "        # Cleanup the splitting characters\n",
+    "        class_options = class_options.replace(\"\\t\", \"\").replace('\\n', '').replace('.', '')\n",
+    "\n",
+    "        # Find out location of the | character to find out the classes that are represented in dataset\n",
+    "        index_of_pipe = class_options.index('|')\n",
+    "        # Split up the string to identify individual values allowed for class\n",
+    "        class_options = class_options[:index_of_pipe].split(\",\")\n",
+    "                \n",
+    "        # Build a list of the class option through getting rid of front and back spacing\n",
+    "        # and replace spacing between with _ character\n",
+    "        list_of_class_options = [class_option.strip().replace(' ', '_') for class_option in class_options]\n",
+    "        \n",
+    "        \n",
+    "        # Initialize the key class value list only once\n",
+    "        if 'class' not in data_dictionary.keys():\n",
+    "            data_dictionary['class'] = []\n",
+    "\n",
+    "        # Populate data dictionary class key values\n",
+    "        # If the value list for the class key is just initialized\n",
+    "        if data_dictionary['class'] == []:\n",
+    "            # Assign the whole list as new value list\n",
+    "            data_dictionary['class'] = list_of_class_options\n",
+    "            # data_dictionary['class'].extend(list_of_class_options)\n",
+    "        # If there is at least a value in list_of_class_options not in the value list for the class key\n",
+    "        elif any([class_option not in data_dictionary['class'] for class_option in list_of_class_options]):\n",
+    "            # Add each value that is not in the list to the value list for the class key\n",
+    "            for value_not_in_list in [val for val in list_of_class_options if val not in data_dictionary['class']]:\n",
+    "                data_dictionary['class'].append(value_not_in_list)\n",
+    "        \n",
+    "# Class is the last column in the dataset\n",
+    "col_names.append('class')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26f16d7b-e7f9-4773-8043-20811b7e6822",
+   "metadata": {},
+   "source": [
+    "Examine the cleaning process from above to see what is the output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "id": "19ce9581-744d-4cd3-a5b6-2cb1ed8fec26",
    "metadata": {
     "tags": []
    },
@@ -741,68 +910,11 @@
       "The list of column names include the following\n",
       "['age', 'sex', 'on_thyroxine', 'query_on_thyroxine', 'on_antithyroid_medication', 'sick', 'pregnant', 'thyroid_surgery', 'I131_treatment', 'query_hypothyroid', 'query_hyperthyroid', 'lithium', 'goitre', 'tumor', 'hypopituitary', 'psych', 'TSH_measured', 'TSH', 'T3_measured', 'T3', 'TT4_measured', 'TT4', 'T4U_measured', 'T4U', 'FTI_measured', 'FTI', 'TBG_measured', 'TBG', 'referral_source', 'class']\n",
       "Below is the dictionary of form (key, value) where key are the column names, value are the allowable values for each column\n",
-      "{'age': ['continuous'], 'sex': ['M', 'F'], 'on_thyroxine': ['f', 't'], 'query_on_thyroxine': ['f', 't'], 'on_antithyroid_medication': ['f', 't'], 'sick': ['f', 't'], 'pregnant': ['f', 't'], 'thyroid_surgery': ['f', 't'], 'I131_treatment': ['f', 't'], 'query_hypothyroid': ['f', 't'], 'query_hyperthyroid': ['f', 't'], 'lithium': ['f', 't'], 'goitre': ['f', 't'], 'tumor': ['f', 't'], 'hypopituitary': ['f', 't'], 'psych': ['f', 't'], 'TSH_measured': ['f', 't'], 'TSH': ['continuous'], 'T3_measured': ['f', 't'], 'T3': ['continuous'], 'TT4_measured': ['f', 't'], 'TT4': ['continuous'], 'T4U_measured': ['f', 't'], 'T4U': ['continuous'], 'FTI_measured': ['f', 't'], 'FTI': ['continuous'], 'TBG_measured': ['f', 't'], 'TBG': ['continuous'], 'referral_source': ['WEST', 'STMW', 'SVHC', 'SVI', 'SVHD', 'other'], 'class': ['increased_binding_protein', 'decreased_binding_protein', 'negative']}\n"
+      "{'age': ['continuous'], 'sex': ['M', 'F'], 'on_thyroxine': ['f', 't'], 'query_on_thyroxine': ['f', 't'], 'on_antithyroid_medication': ['f', 't'], 'sick': ['f', 't'], 'pregnant': ['f', 't'], 'thyroid_surgery': ['f', 't'], 'I131_treatment': ['f', 't'], 'query_hypothyroid': ['f', 't'], 'query_hyperthyroid': ['f', 't'], 'lithium': ['f', 't'], 'goitre': ['f', 't'], 'tumor': ['f', 't'], 'hypopituitary': ['f', 't'], 'psych': ['f', 't'], 'TSH_measured': ['f', 't'], 'TSH': ['continuous'], 'T3_measured': ['f', 't'], 'T3': ['continuous'], 'TT4_measured': ['f', 't'], 'TT4': ['continuous'], 'T4U_measured': ['f', 't'], 'T4U': ['continuous'], 'FTI_measured': ['f', 't'], 'FTI': ['continuous'], 'TBG_measured': ['f', 't'], 'TBG': ['continuous'], 'referral_source': ['WEST', 'STMW', 'SVHC', 'SVI', 'SVHD', 'other'], 'class': ['replacement_therapy', 'underreplacement', 'overreplacement', 'negative', 'hypothyroid', 'primary_hypothyroid', 'compensated_hypothyroid', 'secondary_hypothyroid', 'sick', 'discordant', 'increased_binding_protein', 'decreased_binding_protein', 'hyperthyroid', 'T3_toxic', 'goitre', 'secondary_toxic']}\n"
      ]
     }
    ],
    "source": [
-    "column_name_file = \"./data/thyroid+disease/allbp.names\"\n",
-    "\n",
-    "col_names = []\n",
-    "data_dictionary = {}\n",
-    "\n",
-    "with open(column_name_file, mode = 'r', encoding = 'utf-8-sig') as f:\n",
-    "    # First 6 lines are descriptions so ignore. 7th line is empty line so doesn't matter either\n",
-    "    for times in range(7):\n",
-    "        _ = f.readline()\n",
-    "    \n",
-    "    # Read in remaining lines into a variable\n",
-    "    list_of_string_in_line = f.readlines()\n",
-    "    \n",
-    "    # Build up a list of column name, and a dictionary for data\n",
-    "    for string_in_line in list_of_string_in_line:\n",
-    "        # The column name are identified by ':'\n",
-    "        if ':' in string_in_line:\n",
-    "            # The first part of the line tells me what the column name is\n",
-    "            col_name = string_in_line.split(\":\")[0]\n",
-    "            # Remove spacing with the charcter '_' for column name format\n",
-    "            if \" \" in col_name:\n",
-    "                col_name = col_name.replace(' ', '_')\n",
-    "            \n",
-    "            # Populate the column name for the dataset\n",
-    "            col_names.append(col_name)\n",
-    "            \n",
-    "            # The 2nd part of the line tells me what are the values that are in the column\n",
-    "            values_for_col = string_in_line.split(\":\")[1]\n",
-    "            # Cleanup the splitting characters\n",
-    "            values_for_col = values_for_col.replace(\"\\t\", \"\").replace('\\n', '').replace('.', '').replace(' ', '')\n",
-    "            # Split up the string to identify individual values allowed for column\n",
-    "            values_for_col = values_for_col.split(\",\")\n",
-    "            \n",
-    "            # Create a dictionary of the data\n",
-    "            data_dictionary[col_name] = values_for_col\n",
-    "            \n",
-    "    # Class is the last column in the dataset\n",
-    "    col_names.append('class')\n",
-    "    \n",
-    "    # Find out where the word `class` is to identify the class variable\n",
-    "    index_of_class = ['class' in string_in_line for string_in_line in list_of_string_in_line].index(True)\n",
-    "    # print(index_of_class.index(True))\n",
-    "    \n",
-    "    # Concat the strings from start to identify the class options \n",
-    "    class_options = ''.join(list_of_string_in_line[:index_of_class+1])\n",
-    "    # Cleanup the splitting characters\n",
-    "    class_options = class_options.replace(\"\\t\", \"\").replace('\\n', '').replace('.', '')\n",
-    "    \n",
-    "    # Find out location of the | character to find out the classes that are represented in dataset\n",
-    "    index_of_pipe = class_options.index('|')\n",
-    "    # Split up the string to identify individual values allowed for class\n",
-    "    class_options = class_options[:index_of_pipe].split(\",\")\n",
-    "    \n",
-    "    # Populate data dictionary class key values\n",
-    "    data_dictionary['class'] = [class_option.strip().replace(' ', '_') for class_option in class_options]\n",
-    "\n",
-    "    \n",
     "print('The list of column names include the following')\n",
     "print(col_names)\n",
     "\n",
