Add 2 new function that Identify the testing files, and another that Populate the MasterTestSet dataset

--- a/ThyroidDisease.ipynb
+++ b/ThyroidDisease.ipynb
@@ -718,6 +718,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b37f101-beed-4cca-8ad6-1910e712f7e5",
+   "metadata": {},
+   "source": [
+    "Define functions based on the Population steps above to do the exact same step for the testing set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9245c6be-e899-4cb6-b9b5-4359b66de927",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def IdentifyTestingFiles() -> list:\n",
+    "    import subprocess as sp\n",
+    "    test_files = sp.getoutput(f'find {base_dir} -maxdepth 1 -name \"*.test\"')\n",
+    "    print(data_files)\n",
+    "    list_of_test_files = test_files.split('\\n')\n",
+    "    # Clean up variable\n",
+    "    del test_files\n",
+    "    print(list_of_test_files)\n",
+    "    return list_of_test_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94bdf8a1-0233-4e2f-8e32-247d63fcffa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def PopulateMasterTestSet(list_of_test_files: list) -> pd.DataFrame:\n",
+    "    import pandas as pd\n",
+    "    df = pd.DataFrame()\n",
+    "    for test_file in list_of_test_files:\n",
+    "        if df.empty:\n",
+    "            df = pd.read_csv(test_file, header=None)\n",
+    "        else:\n",
+    "            df = pd.concat([df, pd.read_csv(test_file, header=None)], \n",
+    "                       axis=0, # Add rows to DataFrame\n",
+    "                       ignore_index=True\n",
+    "                      )\n",
+    "    df.head()\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c906c0d6-596a-4286-adc4-009e2e073f3b",
    "metadata": {},
    "source": [
