Add comment to the reference of where code came from

--- a/ThyroidDisease.ipynb
+++ b/ThyroidDisease.ipynb
@@ -460,6 +460,9 @@
     }
    ],
    "source": [
+    "# To get the output from a shell command into a variable\n",
+    "# Reference: https://stackoverflow.com/questions/8659275/how-to-store-the-result-of-an-executed-shell-command-in-a-variable-in-python\n",
+    "\n",
     "import subprocess as sp\n",
     "data_files = sp.getoutput(f'find {base_dir} -maxdepth 1 -name \"*.data\"')\n",
     "print(data_files)"
