Adding in a step of performing StandardScaling in the presentation

--- a/FinalProjectDeliverable.ipynb
+++ b/FinalProjectDeliverable.ipynb
@@ -107,7 +107,8 @@
     "For the dataset, I performed the following steps to perform feature engineering and transformation in hopes of enhancing model output\n",
     "1. Perform kNNImputation regarding the specific metric measures of people based on the {metric_name}_measured having a True/False value\n",
     "2. One hot encoded category variable such as sex and referral_source\n",
-    "3. Created an additional variable called log_TSH_imputed since TSH_imputed is left skewed"
+    "3. Created an additional variable called log_TSH_imputed since TSH_imputed is left skewed\n",
+    "4. Standard scaling features that are in the dataset"
    ]
   },
   {
